feat: update README and .env.example for improved documentation and configuration clarity

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,5 +23,8 @@
     "mongoose-sanitize": "^1.5.0",
     "mongoose-timestamp": "^0.6.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
