--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ yarn-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+# Mantenha o .env.example para referência
+# .env.example
 
 ### Editor Configs ###
 .vscode/
